Fix double-margins on mobile

--- a/_sass/quinnmx.scss
+++ b/_sass/quinnmx.scss
@@ -54,15 +54,15 @@
     margin-bottom: 2rem;
   }
   small, .caption {
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-family: unquote(map-get($bodytype, font-family));
     margin-bottom: 1rem;
   }
   ul:not(.list), ol {
     padding-top: 0;
     margin-bottom: 2rem;
-    margin-left: 2rem;
     li {
+      margin-left: 2rem;
       margin-bottom: 1rem;
     }
   }
